@@ -15,7 +15,7 @@
  */
 package io.micronaut.data.runtime.event;
 
-import io.micronaut.core.annotation.NonNull;
+import org.jspecify.annotations.NonNull;
 import io.micronaut.context.BeanContext;
 import io.micronaut.context.annotation.Primary;
 import io.micronaut.context.processor.ExecutableMethodProcessor;
@@ -279,11 +279,11 @@ public class EntityEventRegistry implements EntityEventListener<Object>, Executa
     }
 
     private boolean isApplicableListener(RuntimePersistentEntity<Object> entity, List<Argument<?>> typeArguments) {
-        return typeArguments.isEmpty() || typeArguments.get(0).getType().isAssignableFrom(entity.getIntrospection().getBeanType());
+        return typeArguments.isEmpty() || typeArguments.getFirst().getType().isAssignableFrom(entity.getIntrospection().getBeanType());
     }
 
     @Override
-    public void process(BeanDefinition<?> beanDefinition, ExecutableMethod<?, ?> method) {
+    public <B> void process(BeanDefinition<B> beanDefinition, ExecutableMethod<B, ?> method) {
         final Argument[] arguments = method.getArguments();
         if (arguments.length == 1) {
             final List<Class<? extends Annotation>> eventTypes = method
